--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,3 +32,17 @@ flutter:
     - assets/images/User.png
     - assets/icons/Back.png
     - assets/icons/Shape.png
+    - assets/images/Oval_Profile.png
+    - assets/icons/Shape_down.png
+    - assets/icons/Add_Chat.png
+    - assets/icons/Search_Icon.png
+    - assets/images/Profile1.png
+    - assets/images/Profile2.png
+    - assets/images/Profile3.png
+    - assets/images/Profile4.png
+    - assets/images/Profile5.png
+    - assets/images/Profile6.png
+    - assets/images/Profile7.png
+    - assets/images/Profile8.png
+    - assets/icons/Icon_Camera.png
+    - assets/icons/Camera_White.png
