--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,14 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-
+  flutter_spinkit: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
   flutter_lints: ^2.0.0
+
 
 
 flutter:
@@ -46,3 +47,5 @@ flutter:
     - assets/images/Profile8.png
     - assets/icons/Icon_Camera.png
     - assets/icons/Camera_White.png
+    - assets/icons/
+    - assets/images/
