--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,23 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.5 <4.0.0'
 
-
 dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
-
   cupertino_icons: ^1.0.2
-  flutter_spinkit: ^5.1.0
+  dio: ^5.4.1
+  json_annotation: ^4.8.1
+  logger: ^2.1.0
+  pretty_dio_logger: ^1.3.1
+  flutter_staggered_grid_view: ^0.7.0
+  http: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
 
 flutter:
 
